[package]
name = "abe"
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "0.3.1"
env_logger = "0.11.8"
ipnet = "2.11.0"
log = "0.4.27"
nix = { version = "0.29.0", features = [ "default", "mount", "fs" ] }
uuid = { version = "1.16.0", features = [ "v4" ] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env-inventory = "0.2.3"
